# mecab

./: CMakeLists.txt
mecab/: CMakeLists.txt  config.h.cmake.in
mecab-ipadic/: CMakeLists.txt
mecab-jumandic/: AuxV.csv  CMakeLists.txt  left-id.def
mecab/example/: CMakeLists.txt
mecab/src/: CMakeLists.txt  Install.cmake  common.h  mecab.h  utils.cpp
